--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -46,11 +46,41 @@ table {
   border-spacing: 0; }
 
 html {
-  box-display: border-box; }
+  box-sizing: border-box;
+  font-family: "Tahoma", sans-serif;
+  font-size: 17px;
+  letter-spacing: 3px;
+  height: 100%; }
+
+body {
+  height: inherit;
+  box-sizing: border-box;
+  padding: 25px; }
+  @media screen and (max-width: 700px) {
+    body {
+      padding: 15px; } }
+  @media screen and (max-width: 400px) {
+    body {
+      padding: 5px; } }
+
+.main-border {
+  box-sizing: padding-box;
+  min-height: 100%;
+  border: 4px solid black; }
+  .main-border a {
+    text-decoration: none;
+    color: blue;
+    font-weight: 700; }
+    .main-border a:hover {
+      text-decoration: underline; }
+
+h1, h2, h3, h4, h5, nav {
+  font-family: "Arial Black";
+  text-transform: uppercase; }
 
 .logo {
-  top: 10vh;
-  left: 20vw;
+  top: 15vh;
+  left: 10vw;
   z-index: -1;
   position: fixed; }
   .logo img {
@@ -58,26 +88,42 @@ html {
     position: absolute;
     width: auto;
     z-index: -10; }
+  @media screen and (max-width: 700px) {
+    .logo {
+      left: 3vw; }
+      .logo img {
+        height: 80vw; } }
 
-.back-body .logo-filter {
-  top: 10vh;
-  left: 20vw;
-  z-index: -2;
-  position: fixed;
-  height: 80vh;
-  width: 80vw; }
+.back-body {
+  height: 100%; }
+  .back-body .logo-filter {
+    top: 10vh;
+    left: 20vw;
+    z-index: -2;
+    position: fixed;
+    height: 80vh;
+    width: 80vw; }
+  .back-body header {
+    top: 0;
+    left: 0;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+    text-transform: uppercase; }
+    .back-body header h1 {
+      background-color: white;
+      padding-left: 11px;
+      text-align: center;
+      display: inline-block; }
+      .back-body header h1 span.top-title {
+        font-size: 30px; }
+    .back-body header nav {
+      display: inline-block; }
+      .back-body header nav ul li {
+        margin: 20px; }
 
 .back-body img {
   filter: contrast(3); }
-
-.try {
-  opacity: 1;
-  -webkit-transition: opacity 0.5s;
-  -moz-transition: opacity 0.5s;
-  -o-transition: opacity 0.5s; }
-
-.try:hover {
-  opacity: 0.5; }
 
 header {
   position: fixed;
@@ -85,99 +131,247 @@ header {
   z-index: 1;
   font-family: "Arial Black";
   text-transform: uppercase; }
+  header .title-nav {
+    width: 600px; }
+    header .title-nav:hover h1 {
+      background-color: rgba(150, 10, 10, 0.2); }
+    header .title-nav:hover li {
+      text-decoration: underline;
+      background-color: rgba(10, 0, 150, 0.2); }
+    header .title-nav:hover .links li:hover {
+      background-color: rgba(255, 255, 0, 0.2); }
+  header a {
+    text-decoration: none;
+    color: black; }
   header h1 {
     background-color: white;
     padding-left: 11px;
     text-align: center;
-    display: inline-block; }
+    display: inline-block;
+    border: 6px solid black;
+    letter-spacing: 20px;
+    font-size: 20px;
+    line-height: 60px; }
     header h1 span.top-title {
       font-size: 30px; }
   header nav {
-    width: 200px;
+    letter-spacing: 10px;
+    text-align: right;
+    line-height: 40px;
     display: inline-block; }
+    header nav .links {
+      display: inline-block; }
+    header nav .menu-icon {
+      display: none; }
     header nav ul li {
       margin: 20px; }
   header .front-page .header-wrap {
     min-width: 80%;
     height: 800px; }
     header .front-page .header-wrap .title-nav {
-      width: 600px;
       margin: 0 auto;
-      display: block;
-      margin-top: 30vh;
-      color: black; }
+      margin-top: 30vh; }
       header .front-page .header-wrap .title-nav nav {
-        letter-spacing: 10px;
-        text-align: right;
-        line-height: 40px; }
-      header .front-page .header-wrap .title-nav h1 {
-        border: 6px solid black;
-        letter-spacing: 20px;
-        font-size: 20px;
-        line-height: 60px; }
-      header .front-page .header-wrap .title-nav:hover h1 {
-        background-color: rgba(150, 10, 10, 0.2); }
-      header .front-page .header-wrap .title-nav:hover li {
-        text-decoration: underline;
-        background-color: rgba(10, 0, 150, 0.2); }
-      header .front-page .header-wrap .title-nav:hover .links li:hover {
-        background-color: rgba(255, 255, 0, 0.2); }
-  header .back-page {
+        width: 200px; }
+  header .back-page .header-wrap {
+    background-color: white;
     margin: 0;
-    padding: 0; }
-    header .back-page .header-wrap {
-      min-width: 80%;
-      height: 800px; }
-      header .back-page .header-wrap .title-nav {
-        width: 600px;
-        margin: 0 auto;
-        display: block;
-        margin-top: 0;
-        color: black; }
-        header .back-page .header-wrap .title-nav nav {
-          letter-spacing: 10px;
-          text-align: right;
-          line-height: 20px;
-          font-size: 15px; }
-        header .back-page .header-wrap .title-nav h1 {
-          border: 6px solid black;
-          letter-spacing: 15px;
-          font-size: 20px;
-          line-height: 40px;
-          width: 300px; }
-        header .back-page .header-wrap .title-nav:hover h1 {
-          background-color: #eacece; }
-        header .back-page .header-wrap .title-nav:hover li {
-          text-decoration: underline;
-          background-color: #ceccea; }
-        header .back-page .header-wrap .title-nav:hover .links li:hover {
-          background-color: #ffffcc; }
+    padding: 0;
+    min-width: 80%;
+    max-width: 800px; }
+    header .back-page .header-wrap .title-nav {
+      margin: 0 auto;
+      display: block; }
+      header .back-page .header-wrap .title-nav nav {
+        line-height: 20px;
+        font-size: 15px; }
+      header .back-page .header-wrap .title-nav h1 {
+        letter-spacing: 15px;
+        font-size: 20px;
+        line-height: 40px;
+        width: 300px; }
+      header .back-page .header-wrap .title-nav:hover h1 {
+        background-color: white; }
 
-a {
-  text-decoration: none;
-  color: black; }
+@media screen and (max-width: 700px) {
+  header {
+    z-index: 20;
+    position: fixed;
+    top: 0;
+    left: 0; }
+    header .header-wrap .title-nav {
+      display: block;
+      width: 100%;
+      text-align: center; }
+      header .header-wrap .title-nav h1 {
+        border: 0px solid red;
+        border-bottom: 6px solid black;
+        border-top: 6px solid black;
+        width: 100vw;
+        letter-spacing: 19px;
+        font-size: 15px;
+        line-height: 50px; }
+        header .header-wrap .title-nav h1 span.top-title {
+          font-size: 23px;
+          letter-spacing: 22px; }
+    header nav {
+      display: inline-block;
+      margin: auto;
+      letter-spacing: 10px;
+      text-align: center;
+      line-height: 40px; }
+      header nav ul li {
+        margin: 20px;
+        padding: 10px; }
 
-.main-wrap {
-  width: 100%;
-  height: 100%;
-  display: inline-block; }
+  .back-page nav {
+    width: 100%; }
+  .back-page .menu {
+    width: 100%;
+    box-shadow: 0px 8px 16 px 0 px rgba(0, 0, 0, 0.2);
+    border-bottom: 3px solid black; }
+  .back-page .menu-icon {
+    border-radius: 5px;
+    padding: 7px;
+    padding-bottom: 4px;
+    background-color: black;
+    margin-top: 30px;
+    margin-right: 10px;
+    display: block;
+    width: 20px;
+    height: 20px;
+    top: 0;
+    right: 0;
+    position: absolute;
+    z-index: 30; }
+  .back-page .links {
+    display: none;
+    z-index: 25;
+    width: 100%;
+    top: 100px; }
+  .back-page .menu:hover .links {
+    display: block; } }
+@media screen and (max-width: 400px) {
+  header .header-wrap .title-nav {
+    display: block;
+    width: 100%;
+    text-align: center; }
+    header .header-wrap .title-nav h1 {
+      border: 0px solid red;
+      border-bottom: 6px solid black;
+      border-top: 6px solid black;
+      width: 80vw !important;
+      letter-spacing: 16px;
+      font-size: 12px !important;
+      line-height: 40px; }
+      header .header-wrap .title-nav h1 span.top-title {
+        font-size: 18px;
+        letter-spacing: 20px; }
 
-.main-border {
-  display: block;
-  margin: 0 auto;
-  border: 4px solid black;
-  width: 90vw;
-  height: 90vh;
-  margin-top: 20px; }
+  .back-body header .header-wrap .title-nav {
+    text-align: left; } }
+.schedule-page ul li.schedule-nav {
+  background-color: rgba(10, 0, 150, 0.2); }
+.schedule-page ul li.contact-nav {
+  background-color: white; }
+
+.contact-page ul li.schedule-nav {
+  background-color: white; }
+.contact-page ul li.contact-nav {
+  background-color: rgba(10, 0, 150, 0.2); }
+
+.content {
+  display: inline-block;
+  padding: 20px;
+  padding-top: 110px; }
 
 .footer {
-  font-family: Helvetica;
   font-size: 12px;
+  display: inline-block;
+  z-index: 40;
   float: right;
   margin-right: 6vw;
   margin-top: 2px; }
 
-.fadein:hover {
-  opacity: 0; }
+ul.errorlist {
+  margin: 0;
+  padding: 0; }
+
+.errorlist li {
+  background-color: red;
+  color: white;
+  display: block;
+  font-size: 10px;
+  margin: 0 0 3px;
+  padding: 4px 5px; }
+
+#contact-form {
+  float: left;
+  display: inline;
+  padding: 10px;
+  border-radius: 5px; }
+  #contact-form .field {
+    padding: 10px; }
+  #contact-form table tr {
+    height: 20px; }
+    #contact-form table tr td {
+      vertical-align: middle;
+      padding: 1px; }
+
+.content-list {
+  padding: 20px;
+  float: left; }
+  .content-list ul li {
+    padding-top: 30px;
+    line-height: 40px; }
+    @media screen and (max-width: 400px) {
+      .content-list ul li {
+        font-size: 15px; } }
+  .content-list h2 {
+    font-size: 30px;
+    letter-spacing: 9px; }
+    @media screen and (max-width: 400px) {
+      .content-list h2 {
+        font-size: 20px; } }
+
+#col-1-2, #col-2-2 {
+  display: inline-block;
+  width: 49%;
+  float: left; }
+
+@media screen and (max-width: 700px) {
+  #col-1-2, #col-2-2 {
+    width: 100%; } }
+#id_message {
+  width: 100%; }
+
+@media screen and (max-width: 700px) {
+  table {
+    font-size: 12px; } }
+#col-1-2 {
+  border-left: 8px solid #333;
+  float: right;
+  border-style: inset; }
+
+.social-media img {
+  border: 8px solid transparent;
+  width: 50px;
+  height: auto;
+  margin-right: 25px;
+  filter: none; }
+  .social-media img:hover {
+    border: 8px solid rgba(255, 255, 0, 0.2);
+    border-radius: 5px;
+    background-color: rgba(255, 255, 0, 0.2); }
+@media screen and (max-width: 700px) {
+  .social-media img {
+    margin-right: 10px; } }
+
+iframe {
+  display: inline-block;
+  margin: auto;
+  padding: 20px;
+  max-width: 360px;
+  height: 202px; }
 
 /*# sourceMappingURL=main.css.map */
