--- a/static/assets/css/main.scss
+++ b/static/assets/css/main.scss
@@ -1,21 +1,69 @@
 @import 'meyer_reset';
-
-html {
-  box-display: border-box;
+$real-small: 400px;
+$on-palm: 700px;
+$on-laptop: 900px;
+@mixin media-query($device) {
+  @media screen and (max-width: $device) {
+  @content;
+  }
 }
-.logo{
-      top: 10vh;
-      left: 20vw;
-      z-index: -1;
-      position: fixed;
-      img {
-	height: 80vh;	
-	position: absolute;
-	width: auto;
-	z-index: -10;
-      }
+html {
+  box-sizing: border-box;
+  font-family: "Tahoma", sans-serif;
+  font-size: 17px;
+  letter-spacing: 3px;
+  height: 100%;
+}
+
+body {
+ height: inherit;
+ box-sizing: border-box;
+ padding: 25px;
+  @include media-query($on-palm) {
+    padding: 15px;
+  }
+ @include media-query($real-small) {
+    padding: 5px;
+  }
+
+}
+  
+.main-border {
+  box-sizing: padding-box;
+  min-height: 100%;
+  border: 4px solid black;
+   a {
+    text-decoration: none;
+    color: rgba(0,0,255,1);
+    font-weight: 700;
+    &:hover {
+      text-decoration: underline;
+    }}
+}
+
+h1, h2, h3, h4, h5, nav {
+  font-family: "Arial Black";
+  text-transform: uppercase;
+}
+.logo {
+  top: 15vh;
+  left: 10vw;
+  z-index: -1;
+  position: fixed;
+  img {
+    height: 80vh;	
+    position: absolute;
+    width: auto;
+    z-index: -10;
+  }
+  @include media-query($on-palm) {
+    img {
+      height: 80vw; 
     }
+    left: 3vw;
+}}
 .back-body{
+  height: 100%;  
  .logo-filter {
     top: 10vh;
     left: 20vw;
@@ -23,75 +71,40 @@ html {
     position: fixed;
     height: 80vh;
     width: 80vw;
-    //background-color: rgba(255,255,255,0.3);
-}
-}
+  }
+  header {
+      top: 0; 
+      left: 0;
+      position: fixed;
+      width: 100%;
+      z-index: 1;
+      text-transform: uppercase;
+      h1 {
+	background-color: rgba(255,255,255,1);
+	padding-left: 11px;
+	text-align: center;
+        display: inline-block;
+	span.top-title {
+	  font-size: 30px;
+	}}
+      nav {
+	display: inline-block;
+	ul li {
+	  margin: 20px;
+	}}}}
 .back-body{
-    img{
+  img {
     filter: contrast(3);
-    }
-}
-
-.try {
-opacity: 1;
--webkit-transition: opacity 0.5s;
--moz-transition: opacity 0.5s;
--o-transition: opacity 0.5s;
-}
-.try:hover {
-  opacity: 0.5;
-} 
-
+}}
 header {
   position: fixed;
   width: 100%;
   z-index: 1;
   font-family: "Arial Black";
   text-transform: uppercase;
-  h1 {
-    background-color: rgba(255,255,255,1);
-    padding-left: 11px;
-    text-align: center;
-        display: inline-block;
-    span.top-title {
-      font-size: 30px;
-    }
-  }
-  
-  nav {
-    width: 200px;
-    display: inline-block;
-    ul {
-      li {
-       margin: 20px;
-      }
-    }
-  }
-
-.front-page {
-  .header-wrap {
-    min-width: 80%;
-    height: 800px;
-    .title-nav {
-      width: 600px;
-      margin: 0 auto;
-      display: block;
-      margin-top: 30vh;
-      color: rgba(0,0,0,1);
-      nav {
-        letter-spacing: 10px;
-        text-align: right;
-        line-height: 40px;
-       
-      }
-      h1 {
-	border: 6px solid black;
-	letter-spacing: 20px;
-	font-size: 20px;
-	line-height: 60px;
-
-}
-      &:hover {
+  .title-nav {
+    width: 600px;
+    &:hover {
 	h1 { 
 	  background-color: rgba(150,10,10,0.2);
 	}
@@ -103,78 +116,286 @@ header {
 	   li {
 	    &:hover {
 	      background-color: rgba(255,255,0,0.2);
-	    }
-	  }
-	}}}}}
-
-.back-page {
-  margin: 0;
-  padding: 0;
+	    }}}}}
+  a {
+    text-decoration: none;
+    color: rgba(0,0,0,1);
+  }
+  h1 {
+     background-color: rgba(255,255,255,1);
+     padding-left: 11px;
+     text-align: center;
+     display: inline-block;
+     border: 6px solid black;
+     letter-spacing: 20px;
+     font-size: 20px;
+     line-height: 60px;
+     span.top-title {
+       font-size: 30px;
+     }}
+  nav {
+    letter-spacing: 10px;
+    text-align: right;
+    line-height: 40px;
+    display: inline-block;
+    .links {
+      display: inline-block;
+    }
+    .menu-icon {
+      display: none;
+    }
+    ul {
+      li {
+       margin: 20px;
+}}}
+.front-page {
   .header-wrap {
-   min-width: 80%;
+    min-width: 80%;
     height: 800px;
     .title-nav {
-      width: 600px;
+      margin: 0 auto;
+      margin-top: 30vh;
+      nav {
+	width: 200px;
+      }
+}}}
+.back-page {
+  .header-wrap {
+    background-color: rgba(255,255,255,1);
+    margin: 0;
+    padding: 0;
+    min-width: 80%;
+    max-width: 800px;
+    .title-nav {
       margin: 0 auto;
       display: block;
-      margin-top: 0;
-      color: rgba(0,0,0,1);
       nav {
-       letter-spacing: 10px;
-        text-align: right;
         line-height: 20px;
 	font-size: 15px;
-      
       }
       h1 {
-	border: 6px solid black;
 	letter-spacing: 15px;
 	font-size: 20px;
 	line-height: 40px;
 	width: 300px;
       }
       &:hover {
-	h1 { 
-	  background-color: #eacece;
+	h1 {
+	  background-color: rgba(255,255,255,1);
 	}
-	li {
-	  text-decoration: underline;
-	  background-color: #ceccea;
-	}
-	.links {
-	   li {
-	    &:hover {
-	      background-color: #ffffcc;
-}}}}}}}}
-
-a {
-  text-decoration: none;
-  color: rgba(0,0,0,1);
+}}}}}
+@include media-query($on-palm) {
+  header {
+    z-index: 20;
+    position: fixed;
+    top: 0;
+    left: 0;
+    .header-wrap {
+      .title-nav {
+	display: block;
+	width: 100%;
+	text-align: center;
+      	h1 {
+	  border: 0px solid red;
+	  border-bottom: 6px solid black;
+	  border-top: 6px solid black;
+	  width: 100vw;
+      	  letter-spacing: 19px;
+      	  font-size: 15px;
+	  line-height: 50px;
+      	  span.top-title {
+      	    font-size: 23px;
+	    letter-spacing: 22px;
+      	  }}}}
+  nav {
+    display: inline-block;
+    margin: auto; 
+    ul li {
+      margin: 20px;
+      padding: 10px;
+    }
+    letter-spacing: 10px;
+    text-align: center;
+    line-height: 40px;
+  }}
+.back-page {
+  nav {
+    width: 100%;
+  }
+  .menu {
+    width: 100%;
+    box-shadow: 0px 8px 16 px 0 px rgba(0,0,0,0.2);
+    border-bottom: 3px solid black;
+  }
+  .menu-icon {
+    border-radius: 5px;
+    padding: 7px;
+    padding-bottom: 4px;
+    background-color: rgba(0,0,0,1);
+    margin-top: 30px;
+    margin-right: 10px;
+    display: block;
+    width: 20px;
+    height: 20px;
+    top: 0;
+    right: 0;
+    position: absolute;
+    z-index: 30;
+  }
+  .links {
+    display: none;
+    z-index: 25;
+    width: 100%;
+    top: 100px;
+  }
+  .menu:hover .links {
+    display: block;
+  }
 }
-
-.main-wrap {
-  width: 100%;
-  height: 100%;
+}
+@include media-query ($real-small){
+   header {
+    .header-wrap {
+      .title-nav {
+	display: block;
+	width: 100%;
+	text-align: center;
+      	h1 {
+	  border: 0px solid red;
+	  border-bottom: 6px solid black;
+	  border-top: 6px solid black;
+	  width: 80vw!important;
+      	  letter-spacing: 16px;
+      	  font-size: 12px!important;
+	  line-height: 40px;
+      	  span.top-title {
+      	    font-size: 18px;
+	    letter-spacing: 20px;
+}}}}}
+.back-body {
+  header {
+    .header-wrap {
+      .title-nav {
+	text-align: left;
+}}}}}
+.schedule-page {
+  ul li.schedule-nav{
+      background-color: rgba(10,0,150,0.2);
+  }
+  ul li.contact-nav{
+      background-color: rgba(255,255,255,1);
+  }}
+.contact-page {
+  ul li.schedule-nav{
+      background-color: rgba(255,255,255,1);
+  }
+  ul li.contact-nav {
+      background-color: rgba(10,0,150,0.2);
+  }}
+.content {
   display: inline-block;
+  padding: 20px;
+  padding-top: 110px;
 }
-.main-border {
-  display: block;
-  margin: 0 auto;
-  border: 4px solid black;
-  width: 90vw;
-  height: 90vh;
-  margin-top: 20px;
-}
-
 .footer {
-  font-family: Helvetica;
   font-size: 12px;
+  display: inline-block;
+  z-index: 40; 
   float: right;
   margin-right: 6vw;
   margin-top: 2px;
 }
-
-.fadein {
+ul.errorlist {
+  margin: 0;
+  padding: 0;
+}
+.errorlist li {
+  background-color: red;
+  color: white;
+  display: block;
+  font-size: 10px;
+  margin: 0 0 3px;
+  padding: 4px 5px;
+}
+#contact-form{
+  float: left;
+  display: inline;
+  padding: 10px;
+  border-radius: 5px;
+  .field {
+    padding: 10px;
+  }
+  table tr {
+    height: 20px;
+    td {
+    vertical-align: middle;
+    padding: 1px;
+  }
+  }
+}
+.content-list {
+  padding: 20px;
+  float: left;
+  ul li {
+    padding-top: 30px;
+    line-height: 40px;
+  @include media-query($real-small) {
+    font-size: 15px;
+  }
+  }
+  h2 {
+    font-size: 30px;
+    letter-spacing: 9px;
+   @include media-query($real-small) {
+    font-size: 20px;
+  }}
+}
+#col-1-2, #col-2-2 {
+  display: inline-block;
+  width: 49%;
+  float: left;
+}
+@include media-query($on-palm) {
+ #col-1-2, #col-2-2 {
+    width: 100%;
+  }
+}
+#id_message {
+  width: 100%;
+}
+@include media-query($on-palm) {
+  table {
+    font-size: 12px; 
+  }
+}
+#col-1-2 {
+  border-left: 8px solid #333;
+  float: right;
+  border-style: inset;
 }
 
-.fadein:hover{opacity:0}
+.social-media {
+  img {
+    border: 8px solid rgba(0,0,0,0);
+    width: 50px;
+    height: auto;
+    margin-right: 25px;
+    filter: none;
+    &:hover {
+      border: 8px solid rgba(255,255,0,0.2);
+      border-radius: 5px;
+      background-color: rgba(255,255,0,0.2);
+    }
+  }
+  @include media-query($on-palm) {
+   img {
+      margin-right: 10px;
+}}}
+
+iframe {
+  display: inline-block;
+  margin: auto;
+  padding: 20px;
+  max-width: 360px;
+  height: 202px;
+}
