--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,17 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<!DOCTYPE html>
 
 <html lang = "en">
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="canonical" href="http://localhost:4000/">
+  <link rel="alternate" type="application/rss+xml" title="Bricktop Combatives" href="/feed.xml">
+
+  <link rel="apple-touch-icon" href="/static/assets/images/icon.png">
+  <link rel="icon" href="/static/assets/images/icon.png">
+  <link rel="shortcut icon" href="/static/assets/images/icon.png">
+
   <link rel="stylesheet" type="text/css" href="/static/assets/css/main.css">  
   <title>{% block title %}Bricktop Combatives{% endblock %}</title>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
@@ -13,37 +23,42 @@ $(function () {
 });
 </script>
 {% endblock %}
-
-
 </head>
-
 <body class={% block bodytype %}{% endblock %}>
+<div class="logo-filter"></div>
+<div class="logo"><img class="fadein" style="opacity:1;"src='/static/assets/images/crown1.png'/></div>
 <header>
   <div class={% block headerwrap1 %}"back-page"{% endblock %}> 
     <div class={% block headerwrap2 %}"header-wrap"{% endblock %}>
-      <div class="fadein title-nav" style="opacity: 0" >
+      <div class="fadein title-nav" style="opacity: 1" >
         <a href="/"><h1><span class="top-title">Bricktop</span></br>Combatives</h1></a>
       <nav>
+	<div class="menu"><span class="menu-icon">
+<svg viewBox="0 0 18 15" width="18px" height="15px">
+              <path fill="#fff" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
+              <path fill="#fff" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
+              <path fill="#fff" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
+            </svg>
+</span>
 	<ul class="links">
-	  <li><a href="/schedule/">schedule</a></li>
-	  <li><a href="/contact/">contact</a></li>
+	  <li class="schedule-nav"><a href="/schedule/">schedule</a></li>
+	  <li class="contact-nav"><a href="/contact/">contact</a></li>
 	</ul> 
+	</div>
       </nav>
-      </div>
     </div>
     </div>
   </div>
 </header>
-<div class="logo-filter"></div>
-<div class="logo"><img class="fadein" style="opacity:0;"src='/static/assets/images/crown1.png'/></div>
 <div class="main-border">
-  {% block content %}{% endblock %}
+  <div class="content">
+    {% block content %}{% endblock %}
+  </div>
 </div>
 <div class="footer">
 {% block footer %}
-<p>Bricktop Combatives &#169; 2017</p>  
+  <p>Bricktop Combatives &#169; 2017</p>  
 {% endblock %} 
 </div>
-
 </body>
 </html>
