--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -1,6 +1,19 @@
 {% extends "base.html" %}
 
 {% block title %}Schedule{% endblock %}
-{% block bodytype %}"back-body"{% endblock %} 
+{% block bodytype %}"back-body schedule-page"{% endblock %} 
 {% block content %}
+<div id="col-1-2">
+<form id="schedule" action="" method="post">
+
+<div class="content-list">
+<h2>Schedule</h2>
+<ul>
+  <li><a href="/contact">Contact</a> for private lesson or corporate event availability</li>
+</ul>
+</div>
+</form>
+</div>
+<div id="col-2-2">.</div>
+
 {% endblock %}
