--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
 {% extends "base.html" %}
-
+ {% block actiontype %}onload="document.body.style.opacity='1'" {% endblock %}
+{% block bodytype %}"front-body"{% endblock %}
 {% block headerwrap1 %}"front-page"{% endblock %} 
