--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -61,7 +61,24 @@ body {
       padding: 15px; } }
   @media screen and (max-width: 400px) {
     body {
-      padding: 5px; } }
+      padding: 10px; } }
+
+h2 {
+  background-color: rgba(0, 0, 0, 0.2);
+  font-weight: 0;
+  letter-spacing: 10px;
+  text-align: left;
+  height: 1px;
+  padding: 10px;
+  margin-bottom: 25px;
+  width: 50%; }
+
+h3 {
+  background-color: rgba(0, 0, 0, 0.2);
+  letter-spacing: 10px;
+  text-align: left;
+  padding: 10px;
+  margin-bottom: 25px; }
 
 .main-border {
   box-sizing: padding-box;
@@ -69,10 +86,11 @@ body {
   border: 4px solid black; }
   .main-border a {
     text-decoration: none;
-    color: blue;
+    color: black;
     font-weight: 700; }
     .main-border a:hover {
-      text-decoration: underline; }
+      text-decoration: underline;
+      background-color: rgba(255, 255, 0, 0.2); }
 
 h1, h2, h3, h4, h5, nav {
   font-family: "Arial Black";
@@ -104,9 +122,9 @@ h1, h2, h3, h4, h5, nav {
     height: 80vh;
     width: 80vw; }
   .back-body header {
+    position: absolute;
     top: 0;
     left: 0;
-    position: fixed;
     width: 100%;
     z-index: 1;
     text-transform: uppercase; }
@@ -204,7 +222,6 @@ header {
       width: 100%;
       text-align: center; }
       header .header-wrap .title-nav h1 {
-        border: 0px solid red;
         border-bottom: 6px solid black;
         border-top: 6px solid black;
         width: 100vw;
@@ -275,6 +292,9 @@ header {
 .schedule-page ul li.contact-nav {
   background-color: white; }
 
+.contact-page .content-list ul li {
+  line-height: 50px;
+  letter-spacing: 3px; }
 .contact-page ul li.schedule-nav {
   background-color: white; }
 .contact-page ul li.contact-nav {
@@ -283,7 +303,11 @@ header {
 .content {
   display: inline-block;
   padding: 20px;
-  padding-top: 110px; }
+  padding-top: 110px;
+  width: 95%; }
+  @media screen and (max-width: 700px) {
+    .content {
+      width: 90%; } }
 
 .footer {
   font-size: 12px;
@@ -320,15 +344,16 @@ ul.errorlist {
 
 .content-list {
   padding: 20px;
-  float: left; }
+  margin: 0 auto; }
   .content-list ul li {
-    padding-top: 30px;
-    line-height: 40px; }
+    line-height: 30px; }
     @media screen and (max-width: 400px) {
       .content-list ul li {
+        line-height: 22px;
         font-size: 15px; } }
   .content-list h2 {
-    font-size: 30px;
+    font-size: 20px;
+    margin-bottom: 20px;
     letter-spacing: 9px; }
     @media screen and (max-width: 400px) {
       .content-list h2 {
@@ -336,8 +361,32 @@ ul.errorlist {
 
 #col-1-2, #col-2-2 {
   display: inline-block;
-  width: 49%;
+  width: 45%;
   float: left; }
+
+.list-content, .list-bullet {
+  display: inline-block;
+  float: left;
+  margin-bottom: 20px; }
+
+.list-content {
+  width: 75%; }
+
+.list-event {
+  width: 100%;
+  display: block; }
+  .list-event:hover a {
+    background-color: rgba(10, 0, 150, 0.2); }
+    .list-event:hover a:hover {
+      background-color: rgba(255, 255, 0, 0.2); }
+
+#col-1-2 {
+  border-left: 8px solid #333;
+  float: right;
+  border-style: inset; }
+  #col-1-2 ul {
+    padding: 20px;
+    letter-spacing: 1px; }
 
 @media screen and (max-width: 700px) {
   #col-1-2, #col-2-2 {
@@ -348,11 +397,6 @@ ul.errorlist {
 @media screen and (max-width: 700px) {
   table {
     font-size: 12px; } }
-#col-1-2 {
-  border-left: 8px solid #333;
-  float: right;
-  border-style: inset; }
-
 .social-media img {
   border: 8px solid transparent;
   width: 50px;
@@ -365,6 +409,8 @@ ul.errorlist {
     background-color: rgba(255, 255, 0, 0.2); }
 @media screen and (max-width: 700px) {
   .social-media img {
+    width: 30px;
+    margin-top: 20px;
     margin-right: 10px; } }
 
 iframe {
@@ -373,5 +419,81 @@ iframe {
   padding: 20px;
   max-width: 360px;
   height: 202px; }
+
+.map-wrap {
+  display: inline-block;
+  border: 1px solid black; }
+
+blockquote {
+  font-size: 30px;
+  color: #646464;
+  letter-spacing: 5px;
+  line-height: 50px; }
+  @media screen and (max-width: 400px) {
+    blockquote {
+      font-size: 20px;
+      line-height: 30px; } }
+
+.author {
+  margin-top: 30px;
+  float: right;
+  color: #646464;
+  letter-spacing: 4px; }
+  @media screen and (max-width: 400px) {
+    .author {
+      font-size: 12px; } }
+
+.list-event-date {
+  margin-left: 8%;
+  display: inline-block;
+  font-size: 15px; }
+  @media screen and (max-width: 400px) {
+    .list-event-date {
+      font-size: 10px; } }
+
+.list-location {
+  font-size: 15px;
+  margin-left: 8%;
+  display: inline-block; }
+  @media screen and (max-width: 400px) {
+    .list-location {
+      font-size: 10px; } }
+
+.events {
+  margin-bottom: 100px; }
+  @media screen and (max-width: 700px) {
+    .events {
+      margin-bottom: 50px; } }
+  .events li {
+    padding: 10px 0; }
+
+.blurb {
+  border-radius: 15px;
+  border-top: 8px dashed rgba(255, 60, 0, 0.4);
+  border-left: 8px dashed rgba(255, 60, 0, 0.4);
+  border-right: 8px dashed rgba(255, 0, 0, 0.4);
+  border-bottom: 8px dashed rgba(255, 0, 0, 0.4);
+  margin: 10px;
+  padding: 20px;
+  text-align: left; }
+  @media screen and (max-width: 700px) {
+    .blurb {
+      padding: 10px;
+      margin: 5px;
+      border-top: 3px dashed rgba(255, 60, 0, 0.4);
+      border-left: 3px dashed rgba(255, 60, 0, 0.4);
+      border-right: 3px dashed rgba(255, 0, 0, 0.4);
+      border-bottom: 3px dashed rgba(255, 0, 0, 0.4); } }
+
+.front-body {
+  opacity: 0;
+  transition: 0.5s ease-in; }
+
+#fade-blurb {
+  opacity: 0;
+  transition: 1s ease-in; }
+
+.non-list {
+  margin-left: 10%; }
 
 /*# sourceMappingURL=main.css.map */
