--- a/static/assets/css/main.scss
+++ b/static/assets/css/main.scss
@@ -23,21 +23,38 @@ body {
     padding: 15px;
   }
  @include media-query($real-small) {
-    padding: 5px;
+    padding: 10px;
   }
 
 }
-  
+h2 {
+    background-color: rgba(0,0,0,0.2);
+    font-weight: 0;
+    letter-spacing: 10px;
+    text-align: left;
+    height: 1px;
+    padding: 10px;
+    margin-bottom: 25px;
+    width: 50%;
+  }
+h3 {
+    background-color: rgba(0,0,0,0.2);
+    letter-spacing: 10px;
+    text-align: left;
+    padding: 10px;
+    margin-bottom: 25px;
+}
 .main-border {
   box-sizing: padding-box;
   min-height: 100%;
   border: 4px solid black;
    a {
     text-decoration: none;
-    color: rgba(0,0,255,1);
+    color: rgba(0,0,0,1);
     font-weight: 700;
     &:hover {
       text-decoration: underline;
+      background-color: rgba(255,255,0,0.2);
     }}
 }
 
@@ -45,6 +62,7 @@ h1, h2, h3, h4, h5, nav {
   font-family: "Arial Black";
   text-transform: uppercase;
 }
+
 .logo {
   top: 15vh;
   left: 10vw;
@@ -73,9 +91,9 @@ h1, h2, h3, h4, h5, nav {
     width: 80vw;
   }
   header {
+      position: absolute;
       top: 0; 
       left: 0;
-      position: fixed;
       width: 100%;
       z-index: 1;
       text-transform: uppercase;
@@ -148,6 +166,7 @@ header {
       li {
        margin: 20px;
 }}}
+
 .front-page {
   .header-wrap {
     min-width: 80%;
@@ -159,6 +178,7 @@ header {
 	width: 200px;
       }
 }}}
+
 .back-page {
   .header-wrap {
     background-color: rgba(255,255,255,1);
@@ -196,7 +216,6 @@ header {
 	width: 100%;
 	text-align: center;
       	h1 {
-	  border: 0px solid red;
 	  border-bottom: 6px solid black;
 	  border-top: 6px solid black;
 	  width: 100vw;
@@ -286,6 +305,12 @@ header {
       background-color: rgba(255,255,255,1);
   }}
 .contact-page {
+  .content-list{
+    ul li {
+      line-height: 50px;
+      letter-spacing: 3px;
+    }
+  }
   ul li.schedule-nav{
       background-color: rgba(255,255,255,1);
   }
@@ -296,6 +321,10 @@ header {
   display: inline-block;
   padding: 20px;
   padding-top: 110px;
+  width: 95%;
+  @include media-query($on-palm){
+    width:90%;
+  }
 }
 .footer {
   font-size: 12px;
@@ -335,16 +364,20 @@ ul.errorlist {
 }
 .content-list {
   padding: 20px;
-  float: left;
-  ul li {
-    padding-top: 30px;
-    line-height: 40px;
+  margin: 0 auto;
+  
+  ul {
+    li {
+    line-height: 30px;
   @include media-query($real-small) {
+    line-height: 22px;
     font-size: 15px;
+    }
   }
   }
   h2 {
-    font-size: 30px;
+    font-size: 20px;
+    margin-bottom: 20px;
     letter-spacing: 9px;
    @include media-query($real-small) {
     font-size: 20px;
@@ -352,9 +385,51 @@ ul.errorlist {
 }
 #col-1-2, #col-2-2 {
   display: inline-block;
-  width: 49%;
+  width: 45%;
   float: left;
 }
+
+.list-content, .list-bullet {
+  display: inline-block;
+  float: left;
+  margin-bottom: 20px;
+}
+
+.list-content {
+  width: 75%;
+}
+
+.list-event {
+  width: 100%;
+  display: block;
+  &:hover {
+    a {
+      background-color: rgba(10,0,150,0.2);
+      &:hover {
+	background-color: rgba(255,255,0,0.2);
+      }
+    }  
+
+  }
+}
+
+#col-2-2 {
+  ul {
+  //  margin-left: 10%; 
+  }
+}
+
+#col-1-2 {
+  border-left: 8px solid #333;
+  float: right;
+  border-style: inset;
+  ul {
+    padding: 20px;
+    letter-spacing: 1px;
+  }
+}
+
+
 @include media-query($on-palm) {
  #col-1-2, #col-2-2 {
     width: 100%;
@@ -368,12 +443,6 @@ ul.errorlist {
     font-size: 12px; 
   }
 }
-#col-1-2 {
-  border-left: 8px solid #333;
-  float: right;
-  border-style: inset;
-}
-
 .social-media {
   img {
     border: 8px solid rgba(0,0,0,0);
@@ -389,6 +458,8 @@ ul.errorlist {
   }
   @include media-query($on-palm) {
    img {
+      width:30px;
+      margin-top: 20px;
       margin-right: 10px;
 }}}
 
@@ -398,4 +469,93 @@ iframe {
   padding: 20px;
   max-width: 360px;
   height: 202px;
+}
+
+.map-wrap {
+  display: inline-block;
+  border: 1px solid rgba(0,0,0,1);
+}
+
+blockquote {
+  font-size: 30px;
+  color: rgba(100,100,100,1);
+  letter-spacing: 5px;
+  line-height: 50px;
+  @include media-query($real-small){
+    font-size: 20px;
+    line-height: 30px;
+  }
+}
+.author {
+  margin-top: 30px;
+  float: right;
+  color: rgba(100,100,100,1);
+  letter-spacing: 4px;
+  @include media-query($real-small){
+    font-size: 12px;
+  }
+}
+
+.list-event-date {
+  margin-left: 8%;
+  display: inline-block;
+  font-size: 15px;
+  @include media-query($real-small){
+    font-size: 10px;
+  }
+}
+
+.list-location {
+  font-size: 15px;
+  margin-left: 8%;
+  display: inline-block;
+@include media-query($real-small){
+    font-size: 10px;
+  }
+}
+
+.events {
+    margin-bottom: 100px;
+    @include media-query($on-palm){
+      margin-bottom: 50px;
+    }
+  li {
+//    margin: 5px;
+    padding: 10px 0;
+}}
+
+.blurb {
+  //background-color: rgba(255,60,0,0.4);
+  border-radius: 15px;
+  border-top: 8px dashed rgba(255,60,0,0.4);
+  border-left: 8px dashed rgba(255,60,0,0.4);
+  border-right: 8px dashed rgba(255,0,0,0.4);
+  border-bottom: 8px dashed rgba(255,0,0,0.4);
+  //color: rgba(255,255,255,1);
+  margin: 10px;
+  padding: 20px;
+  text-align: left;
+  @include media-query($on-palm){
+    padding: 10px;
+    margin: 5px;
+    border-top: 3px dashed rgba(255,60,0,0.4);
+  border-left: 3px dashed rgba(255,60,0,0.4);
+  border-right: 3px dashed rgba(255,0,0,0.4);
+  border-bottom: 3px dashed rgba(255,0,0,0.4);
+
+  }
+}
+
+.front-body {
+    opacity: 0;
+    transition: 0.5s ease-in;
+}
+
+#fade-blurb {
+  opacity: 0;
+  transition: 1s ease-in;
+}
+
+.non-list {
+  margin-left: 10%;
 }
