--- a/templates/location.html
+++ b/templates/location.html
@@ -10,7 +10,7 @@
 </div>
 </div>
 </div>
-<div id="cod-2-2">
+<div id="col-2-2">
 <div class="content-list">
 <h2>{{ location.location_name }}</h2>
 
