--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -75,10 +75,13 @@ h2 {
 
 h3 {
   background-color: rgba(0, 0, 0, 0.2);
+  font-weight: 0;
   letter-spacing: 10px;
   text-align: left;
+  height: 1px;
   padding: 10px;
-  margin-bottom: 25px; }
+  margin-bottom: 25px;
+  min-width: 50%; }
 
 .main-border {
   box-sizing: padding-box;
@@ -92,7 +95,7 @@ h3 {
       text-decoration: underline;
       background-color: rgba(255, 255, 0, 0.2); }
 
-h1, h2, h3, h4, h5, nav {
+h1, h2, h3, h4, h5, nav, button {
   font-family: "Arial Black";
   text-transform: uppercase; }
 
@@ -295,6 +298,8 @@ header {
 .contact-page .content-list ul li {
   line-height: 50px;
   letter-spacing: 3px; }
+.contact-page .content-list .social-media a {
+  background-color: transparent !important; }
 .contact-page ul li.schedule-nav {
   background-color: white; }
 .contact-page ul li.contact-nav {
@@ -341,6 +346,20 @@ ul.errorlist {
     #contact-form table tr td {
       vertical-align: middle;
       padding: 1px; }
+  #contact-form:hover button {
+    background-color: rgba(10, 0, 150, 0.2); }
+  #contact-form button {
+    margin: 20px auto;
+    width: 100%;
+    min-width: 50%;
+    background-color: transparent;
+    border: 1px solid black;
+    line-height: 30px;
+    letter-spacing: 7px;
+    transition: .2s ease-in-out; }
+    #contact-form button:hover {
+      cursor: pointer;
+      background-color: rgba(255, 255, 0, 0.2); }
 
 .content-list {
   padding: 20px;
@@ -468,22 +487,13 @@ blockquote {
     padding: 10px 0; }
 
 .blurb {
-  border-radius: 15px;
-  border-top: 8px dashed rgba(255, 60, 0, 0.4);
-  border-left: 8px dashed rgba(255, 60, 0, 0.4);
-  border-right: 8px dashed rgba(255, 0, 0, 0.4);
-  border-bottom: 8px dashed rgba(255, 0, 0, 0.4);
   margin: 10px;
   padding: 20px;
   text-align: left; }
   @media screen and (max-width: 700px) {
     .blurb {
       padding: 10px;
-      margin: 5px;
-      border-top: 3px dashed rgba(255, 60, 0, 0.4);
-      border-left: 3px dashed rgba(255, 60, 0, 0.4);
-      border-right: 3px dashed rgba(255, 0, 0, 0.4);
-      border-bottom: 3px dashed rgba(255, 0, 0, 0.4); } }
+      margin: 5px; } }
 
 .front-body {
   opacity: 0;
@@ -495,5 +505,89 @@ blockquote {
 
 .non-list {
   margin-left: 10%; }
+
+.announcement ul {
+  margin-left: 20px;
+  color: white;
+  padding: 10px;
+  display: inline-block;
+  margin: 20px; }
+  .announcement ul li {
+    background-color: rgba(255, 0, 0, 0.5);
+    padding: 10px;
+    line-height: 20px; }
+
+.announcement-date {
+  font-weight: 700; }
+
+.document-download {
+  margin-bottom: 30px; }
+  .document-download img {
+    height: 50px;
+    width: 50px;
+    vertical-align: middle;
+    display: inline-block; }
+  .document-download span {
+    display: inline-block;
+    text-transform: uppercase;
+    font-weight: 700; }
+  .document-download .doc-icon, .document-download .doc-title {
+    line-height: 70px; }
+  .document-download:hover .expand-options-save {
+    background-color: rgba(10, 0, 150, 0.2); }
+
+/* download button start */
+.expand {
+  font-family: serif;
+  margin-right: 20px; }
+  @media screen and (max-width: 700px) {
+    .expand {
+      margin-right: 10px; } }
+
+.expand {
+  display: inline-block; }
+
+.expand-options-save {
+  line-height: 25px;
+  font-size: 13px;
+  border: 1px solid black;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.5);
+  text-decoration: none;
+  display: inline-block;
+  padding: 2px 7px;
+  transition: .2s ease-in-out; }
+  .expand-options-save .icon {
+    display: inline-block;
+    width: 20px;
+    margin-right: 15px; }
+  .expand-options-save:hover {
+    cursor: pointer;
+    background-color: rgba(255, 255, 0, 0.2) !important; }
+
+.save-button {
+  margin-left: 25px; }
+  .save-button .side {
+    display: inline-block !important; }
+  .save-button .down {
+    display: none !important; }
+  .save-button:hover .side {
+    display: none !important; }
+  .save-button:hover .down {
+    display: inline-block !important; }
+
+.save-button {
+  margin-left: 25px; }
+  .save-button .side {
+    display: inline; }
+  .save-button .down {
+    display: none; }
+  .save-button:hover .side {
+    display: none; }
+  .save-button:hover .down {
+    display: inline; }
+
+#expand:hover {
+  cursor: pointer; }
 
 /*# sourceMappingURL=main.css.map */
