--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@ $(function () {
 </div>
 <div class="footer">
 {% block footer %}
-  <p>Bricktop Combatives &#169; 2017</p>  
+  <p>Bricktop Combatives &#169; 2017-18</p>  
 {% endblock %} 
 </div>
 </body>
